2013-06-21 Lubos Dolezel <lubos@dolezel.info>

	* Headers/GSBlocks.h: weakly import _Block_copy and _Block_release

2013-06-08 Lubos Dolezel <lubos@dolezel.info>

	* Source/NSTimeZone.m
	  Implement nextDaylightSavingTimeTransitionAfterDate:

2013-06-06 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Source/Additions/Unicode.m
	  Headers/Foundation/NSString.h
	  revert my change from 2013-05-29
	  breaks decoding of .gorm files in NSString for me on amd64

2013-05-31  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSLock.m: ([-lockWhenCondition:beforeDate:])
        Lock mutex using -lockBeforeDate: so that we can abandon the wait
        for the condition at the spacified date in the case where we can't
        even obtain a lock before that date.
        Fix for bug #39126

2013-05-29 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Headers/Foundation/NSString.h
	  make NSStringEncoding enum typdef to NSUInteger
	* Source/Additions/Unicode.m
	  fix format string to print out NSStringEncoding

2013-05-17  Ivan Vučica <ivan@vucica.net>

	* Source/NSDate.m:
	In case NAN macro is defined in math.h, prefer that over
	using the nan() function call.

2013-05-17  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSMessagePortNameServer.m: fix error in line count check
        in last change.

2013-05-16  Ivan Vučica <ivan@vucica.net>

	* Source/GSLocale.m:
	* configure.ac:
	Added check for whether there is any useful information in
	struct lconv. Android doesn't have anything there, despite
	having locale.h, so it makes little sense to try to access
	the nonexistent fields in GSLocale.m

2013-05-16  Ivan Vučica <ivan@vucica.net>

	* configure.ac:
	* cross.config:
	When cross-compiling, obeying an additional setting for
	Objective-C 2.0 support. Fixed a missing '$' in cross.config.

2013-05-15  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSMessagePortNameServer.m: fix for bug #38981

2013-05-13  Fred Kiefer <FredKiefer@gmx.de>
